added new things

--- a/index.html
+++ b/index.html
@@ -10,17 +10,42 @@
 
       <link rel="stylesheet" href="./css/reset.css" />
       <link rel="stylesheet" href="./css/style.css" />
+      <link rel="stylesheet" href="./assets/fonts/style.css" />
+
+      <!-- Scripts -->
+
+      <script src="./js/main.js" defer></script>
    </head>
    <body>
       <header class="header">
-         <nav class="container">
+         <nav class="container" data-menu>
             <a href="#" class="logo">beauty<span>salon</span>.</a>
-            <div class="menu">...</div>
+            <div class="menu">
+               <ul class="menu__list">
+                  <li class="menu__item">
+                     <a class="title" href="#home">Início</a>
+                  </li>
+                  <li class="menu__item">
+                     <a class="title" href="#about">Sobre</a>
+                  </li>
+                  <li class="menu__item">
+                     <a class="title" href="#services">Serviços</a>
+                  </li>
+                  <li class="menu__item">
+                     <a class="title" href="#testimonials">Depoimentos</a>
+                  </li>
+                  <li class="menu__item">
+                     <a class="title" href="#contact">Contato</a>
+                  </li>
+               </ul>
+            </div>
+            <div class="toggle icon-menu"></div>
+            <div class="toggle icon-close"></div>
          </nav>
       </header>
       <main>
-         <section class="section main__home">
-            <div class="home__image-container">
+         <section class="section main__home" id="home">
+            <div class="home__img-container">
                <img
                   class="home__img"
                   src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
@@ -36,7 +61,84 @@
                <a class="home__btn" href="#">Agendar um horário</a>
             </div>
          </section>
+
          <div class="divider-1"></div>
+
+         <section class="section main__about" id="about">
+            <div class="about__img-container">
+               <img
+                  class="about__img"
+                  src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
+                  alt="3 mulheres sorrindo"
+               />
+            </div>
+            <div class="container">
+               <div class="about__text">
+                  <h2 class="about__title">Sobre nós</h2>
+                  <p>
+                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                     Quasi aliquam quaerat deserunt sit animi, eos, distinctio
+                     natus commodi tempora fugit iusto dignissimos. Odio
+                     possimus assumenda impedit provident officia molestias id?
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                     Ipsum quidem, quod vero ad porro neque harum illo fuga
+                     inventore eligendi maiores atque perferendis autem eveniet
+                     eaque, dicta ea modi cumque.
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Maxime distinctio possimus, sit doloribus ducimus laborum
+                     ipsa cum! Aliquid mollitia ad fugit, a facilis illo
+                     veritatis quibusdam soluta provident, vitae impedit.
+                  </p>
+               </div>
+            </div>
+         </section>
+
+         <div class="divider-2"></div>
+
+         <section class="section main__services" id="services">
+            <div class="container">
+               <header class="services__header">
+                  <h2>Serviços</h2>
+                  <p>
+                     Com mais de 10 anos no mercado, o
+                     <span>Beautysalon</span> já conquistou clientes de inúmeros
+                     países com seus tratamentos exclusivos e totalmente
+                     naturais
+                  </p>
+               </header>
+               <div class="cards">
+                  <div class="services__card">
+                     <i class="icon-woman-hair"></i>
+                     <h3 class="card__title">Terapia capilar</h3>
+                     <p>
+                        Terapia completa para couro cabeludo e fios, protegendo
+                        todos os tipos de cabelos, inclusive os longos e finos.
+                     </p>
+                  </div>
+                  <div class="services__card">
+                     <i class="icon-trim"></i>
+                     <h3 class="card__title">Cortes</h3>
+                     <p>
+                        A nossa equipe é repleta de profissionais renomados,
+                        famosos por lançarem tendências com cortes diferenciados
+                        e clássicos.
+                     </p>
+                  </div>
+                  <div class="services__card">
+                     <i class="icon-cosmetic"></i>
+                     <h3 class="card__title">Tratamentos</h3>
+                     <p>
+                        O beautysalon conta com diversos tratamentos naturais e
+                        totalmente veganos, para qualquer tipo de cabelo.
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
 </html>
