--- a/index.html
+++ b/index.html
@@ -54,20 +54,24 @@
       <main>
          <!-- Home -->
          <section class="section main__home" id="home">
-            <div class="home__img-container image">
-               <img
-                  class="home__img"
-                  src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
-                  alt="Mulher sorrindo penteando outra mulher"
-               />
-            </div>
             <div class="container text">
-               <h2 class="home__title">Saúde natural para os seus cabelos</h2>
-               <p class="home__desc">
-                  Um salão exclusivo em São Paulo, especializado em tratamentos
-                  naturais.
-               </p>
-               <a class="btn" href="#">Agendar um horário</a>
+               <div class="home__img-container image">
+                  <img
+                     class="home__img"
+                     src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
+                     alt="Mulher sorrindo penteando outra mulher"
+                  />
+               </div>
+               <div>
+                  <h2 class="home__title">
+                     Saúde natural para os seus cabelos
+                  </h2>
+                  <p class="home__desc subtitle">
+                     Um salão exclusivo em São Paulo, especializado em
+                     tratamentos naturais.
+                  </p>
+                  <a class="btn" href="#">Agendar um horário</a>
+               </div>
             </div>
          </section>
 
@@ -75,14 +79,14 @@
 
          <!-- About -->
          <section class="section main__about" id="about">
-            <div class="about__img-container image">
-               <img
-                  class="about__img"
-                  src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
-                  alt="3 mulheres sorrindo"
-               />
-            </div>
             <div class="container text">
+               <div class="about__img-container image">
+                  <img
+                     class="about__img"
+                     src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80"
+                     alt="3 mulheres sorrindo"
+                  />
+               </div>
                <div class="about__text">
                   <h2 class="about__title">Sobre nós</h2>
                   <p>
@@ -114,7 +118,7 @@
             <div class="container">
                <header class="services__header">
                   <h2>Serviços</h2>
-                  <p>
+                  <p class="subtitle">
                      Com mais de 10 anos no mercado, o
                      <span>Beautysalon</span> já conquistou clientes de inúmeros
                      países com seus tratamentos exclusivos e totalmente
@@ -251,6 +255,27 @@
                </div>
             </div>
          </section>
+
+         <div class="divider-1"></div>
       </main>
+      <footer class="section">
+         <div class="container">
+            <div class="brand">
+               <a href="#home" class="logo">beauty<span>salon</span>.</a>
+               <p>©2021 Beautysalon.</p>
+               <p>Todos os direitos reservados.</p>
+            </div>
+            <div class="social">
+               <a href="https://instagram.com" target="_blank"
+                  ><i class="icon-instagram"></i></a
+               ><a href="https://facebook.com" target="_blank"
+                  ><i class="icon-facebook"></i></a
+               ><a href="https://youtube.com" target="_blank"
+                  ><i class="icon-youtube"></i
+               ></a>
+            </div>
+         </div>
+      </footer>
+      <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
    </body>
 </html>
